--- a/Archimedes.Patterns.WPF/Archimedes.Patterns.WPF.csproj
+++ b/Archimedes.Patterns.WPF/Archimedes.Patterns.WPF.csproj
@@ -88,6 +88,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="ViewModels\ChooseItemViewModel.cs" />
+    <Compile Include="ViewModels\Commands\CommandManagerViewModel.cs" />
+    <Compile Include="ViewModels\Commands\UnDoCommandViewModel.cs" />
     <Compile Include="ViewModels\ViewBuilder.cs" />
     <Compile Include="ViewModels\WorkSpaceViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
