--- a/Archimedes.Geometry/Archimedes.Geometry.csproj
+++ b/Archimedes.Geometry/Archimedes.Geometry.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Builder\ConvexHullBuilder.cs" />
     <Compile Include="Builder\PathConnector.cs" />
-    <Compile Include="Common.cs" />
+    <Compile Include="MathHelper.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Extensions\BitmapBoundingBox.cs" />
     <Compile Include="Extensions\NumberExtension.cs" />
@@ -77,9 +77,16 @@
     <Compile Include="Primitives\Rectangle2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ray.cs" />
+    <Compile Include="Rendering\DrawingGroup.cs" />
+    <Compile Include="Rendering\Effects\IEffect.cs" />
+    <Compile Include="Rendering\Effects\OverlineEffect.cs" />
+    <Compile Include="Rendering\Renderer.cs" />
+    <Compile Include="Rendering\RenderEventArgs.cs" />
+    <Compile Include="Rendering\ZoomWorker.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="VectorDrawer.cs" />
+    <Compile Include="Vertices.cs" />
     <Compile Include="VerticesHelper.cs" />
   </ItemGroup>
   <ItemGroup>
