added Archimedes Controls, added Color Viewer (Fast Pie-Chart Control)

--- a/Archimedes.Patterns.WPF/Archimedes.Patterns.WPF.csproj
+++ b/Archimedes.Patterns.WPF/Archimedes.Patterns.WPF.csproj
@@ -88,6 +88,7 @@
     <Compile Include="FlowDocuments\Fragment.cs" />
     <Compile Include="FlowDocuments\DocHelpers.cs" />
     <Compile Include="FlowDocuments\ItemsContent.cs" />
+    <Compile Include="FlowDocuments\XamlToXPS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
