--- a/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
+++ b/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
@@ -120,7 +120,7 @@
     </ProjectReference>
     <ProjectReference Include="..\AvalonDock\AvalonDock\AvalonDock.csproj">
       <Project>{87E61430-4243-45F2-B74E-0A4C096CEBF3}</Project>
-      <Name>AvalonDock</Name>
+      <Name>AvalonDock %28AvalonDock\AvalonDock%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
