--- a/AvalonDock/AvalonDock.Themes/AvalonDock.Themes.csproj
+++ b/AvalonDock/AvalonDock.Themes/AvalonDock.Themes.csproj
@@ -191,7 +191,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AvalonDock\AvalonDock.csproj">
       <Project>{87E61430-4243-45F2-B74E-0A4C096CEBF3}</Project>
-      <Name>AvalonDock</Name>
+      <Name>AvalonDock %28AvalonDock\AvalonDock%29</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
