--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Conditions\OperatorManagerService.cs" />
     <Compile Include="Data\Entity.cs" />
     <Compile Include="Data\IEntityBase.cs" />
+    <Compile Include="Data\IPersistentList.cs" />
     <Compile Include="Data\LimitedStack.cs" />
     <Compile Include="Data\ObservableLimitedStack.cs" />
     <Compile Include="Data\Tree\ComplexSubtree.cs" />
