--- a/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
+++ b/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
@@ -86,6 +86,10 @@
     <Compile Include="WorkBenchServices\Loader\Block.xaml.cs">
       <DependentUpon>Block.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WorkBenchServices\Loader\HeavyLoadView.xaml.cs">
+      <DependentUpon>HeavyLoadView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WorkBenchServices\Loader\HeavyLoadViewModel.cs" />
     <Compile Include="WorkBenchServices\Loader\LoaderViewModel.cs" />
     <Compile Include="WorkBenchServices\Loader\LoadingAnimation.xaml.cs">
       <DependentUpon>LoadingAnimation.xaml</DependentUpon>
@@ -162,6 +166,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="WorkBenchServices\Loader\Block.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WorkBenchServices\Loader\HeavyLoadView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
