--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -97,7 +97,10 @@
     <Compile Include="Data\Tree\SimpleTree.cs" />
     <Compile Include="Data\Tree\SimpleTreeNode.cs" />
     <Compile Include="Data\Tree\SimpleTreeNodeList.cs" />
+    <Compile Include="Deployment\FileInstaller.cs" />
+    <Compile Include="Deployment\FileInstallTarget.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="FileSizeFormatProvider.cs" />
     <Compile Include="ICloneable.cs" />
     <Compile Include="Notifications\NotificationCollection.cs" />
     <Compile Include="Notifications\UserNotification.cs" />
