added some serialisation / deployment helpers

--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Conditions\Operator.cs" />
     <Compile Include="Conditions\OperatorManagerService.cs" />
     <Compile Include="Converters\TimeSpanConverter.cs" />
+    <Compile Include="Crypto\StringObfuscator.cs" />
     <Compile Include="Data\Entity.cs" />
     <Compile Include="Data\IEntityBase.cs" />
     <Compile Include="Data\IPersistentList.cs" />
@@ -99,6 +100,8 @@
     <Compile Include="Data\Tree\SimpleTreeNodeList.cs" />
     <Compile Include="Deployment\FileInstaller.cs" />
     <Compile Include="Deployment\FileInstallTarget.cs" />
+    <Compile Include="Deployment\IVersionStore.cs" />
+    <Compile Include="Deployment\XMLVersionStore.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="FileSizeFormatProvider.cs" />
     <Compile Include="ICloneable.cs" />
@@ -113,7 +116,9 @@
     <Compile Include="Plugins\PluginHostProvider.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Reflection\TypeHelper.cs" />
+    <Compile Include="Serializing\SerializableDictionary.cs" />
     <Compile Include="Serializing\SerializerHelper.cs" />
+    <Compile Include="Serializing\SerializableSettingsBase.cs" />
     <Compile Include="Threading\IDispatcher.cs" />
     <Compile Include="Threading\LockEx.cs" />
     <Compile Include="Threading\ThreadMutableObservableCollection.cs" />
