several improvements, added new features

--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Commands\ICommandSimple.cs" />
     <Compile Include="Commands\ICommandUndo.cs" />
     <Compile Include="Commands\NotExecutableCommand.cs" />
+    <Compile Include="Commands\PropertySetCommand.cs" />
     <Compile Include="Commands\SimpleRelayCommand.cs" />
     <Compile Include="Commands\States\BoolStateCommand.cs" />
     <Compile Include="Commands\States\IStateCommand.cs" />
@@ -106,6 +107,7 @@
     <Compile Include="EventArgs.cs" />
     <Compile Include="FileSizeFormatProvider.cs" />
     <Compile Include="ICloneable.cs" />
+    <Compile Include="MVMV\IViewModelBase.cs" />
     <Compile Include="Notifications\NotificationCollection.cs" />
     <Compile Include="Notifications\UserNotification.cs" />
     <Compile Include="Conditions\DynamicConditionExpression.cs" />
@@ -117,6 +119,8 @@
     <Compile Include="Plugins\PluginHostProvider.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Reflection\TypeHelper.cs" />
+    <Compile Include="RegEx\RegExReplaceAggregate.cs" />
+    <Compile Include="RegEx\RegExReplacer.cs" />
     <Compile Include="Serializing\SerializableDictionary.cs" />
     <Compile Include="Serializing\SerializerHelper.cs" />
     <Compile Include="Serializing\SerializableSettingsBase.cs" />
