--- a/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
+++ b/Archimedes.Patterns.Services.WPF/Archimedes.Services.WPF.csproj
@@ -94,7 +94,7 @@
     <Compile Include="WindowViewModelMapping\IWindowViewModelMappings.cs" />
     <Compile Include="WindowViewModelMapping\IWindowViewModelMappingsContract.cs" />
     <Compile Include="WindowViewModelMapping\WindowViewModelMappings.cs" />
-    <Compile Include="WorkBenchServices\DialogWPFResult.cs" />
+    <Compile Include="WorkBenchServices\IDDialogResultConverter.cs" />
     <Compile Include="WorkBenchServices\IWorkBenchService.cs" />
     <Compile Include="WorkBenchServices\Loader\Block.xaml.cs">
       <DependentUpon>Block.xaml</DependentUpon>
@@ -137,7 +137,7 @@
     </ProjectReference>
     <ProjectReference Include="..\AvalonDock\AvalonDock\AvalonDock.csproj">
       <Project>{87E61430-4243-45F2-B74E-0A4C096CEBF3}</Project>
-      <Name>AvalonDock %28AvalonDock\AvalonDock%29</Name>
+      <Name>AvalonDock</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
