--- a/Archimedes.Maps/Archimedes.Maps.csproj
+++ b/Archimedes.Maps/Archimedes.Maps.csproj
@@ -50,15 +50,18 @@
     <Compile Include="GeoCoding\GeoCoderResponse.cs" />
     <Compile Include="GeoCoding\GeoCodeStatus.cs" />
     <Compile Include="GeoCoding\GeoCodingServiceBase.cs" />
-    <Compile Include="GeoCoding\IAsyncGeoCodingService.cs" />
-    <Compile Include="GeoCoding\ThreadSaveGeoCoder.cs" />
+    <Compile Include="Services\IQueuedGeoCodingService.cs" />
+    <Compile Include="GeoCoding\QueuedGeoCodingService.cs" />
     <Compile Include="GeoCoordinate.cs" />
     <Compile Include="GeoPolygon.cs" />
+    <Compile Include="GeoRectangle.cs" />
     <Compile Include="GeoRectRegion.cs" />
+    <Compile Include="GeoSize.cs" />
     <Compile Include="IWorldLocationMember.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IDirectionsService.cs" />
+    <Compile Include="Routes\GeoRoute.cs" />
+    <Compile Include="Services\IGeoRouteService.cs" />
     <Compile Include="Services\IGeoCodingService.cs" />
     <Compile Include="Services\IGeoProjectionService.cs" />
     <Compile Include="WorldLocation.cs" />
@@ -67,7 +70,6 @@
     <None Include="Archimedes.snk" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Directions\" />
     <Folder Include="Util\" />
   </ItemGroup>
   <ItemGroup>
